deployment preparation